# Tilt

./: .gitignore  CHANGELOG.md  DEPLOY.md  METHODOLOGY.md  README.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: backtest.py  cup_simulator.py  engine.py  franchises.py  historical.py  live_state.py  live_wp.py  main.py  metrics.py  nhl_api.py  pbp_pipeline.py  pipeline.py  ratings.py  seasons.py  standings.py  teams.py  tuner.py
backend/artifacts/: frozen_params.json  frozen_params_v2.json  live_wp_v2.json
backend/data_cache/: manifest.json  pbp_manifest.json
backend/data_cache/pbp_goals/: 20102011.parquet  20112012.parquet  20122013.parquet  20132014.parquet  20142015.parquet  20152016.parquet  20162017.parquet  20172018.parquet  20182019.parquet  20192020.parquet  20202021.parquet  20212022.parquet  20222023.parquet  20232024.parquet  20242025.parquet
backend/data_cache/raw/: 19171918.parquet  19181919.parquet  19191920.parquet  19201921.parquet  19211922.parquet  19221923.parquet  19231924.parquet  19241925.parquet  19251926.parquet  19261927.parquet  19271928.parquet  19281929.parquet  19291930.parquet  19301931.parquet  (+94 more)
backend/results/: test_evaluation.json
backend/scripts/: build_live_wp.py  evaluate.py  freeze_params.py
backend/tests/: test_api.py  test_backtest.py  test_cup_simulator.py  test_evaluate_guardrails.py  test_franchises.py  test_home_bump.py  test_live_state.py  test_live_wp.py  test_metrics.py  test_pipeline.py  test_ratings.py  test_ratings_v2.py  test_seasons.py  test_standings.py  test_tuner.py
(+12 files in other folders)
